Queues to ArrayLists Fixed executeUpdate in Search